Added Controllers and associated context

--- a/BookApplication/Web.config
+++ b/BookApplication/Web.config
@@ -11,6 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-BookApplication-20161004053143.mdf;Initial Catalog=aspnet-BookApplication-20161004053143;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="BookApplicationContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=BookApplicationContext-20161004174017; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|BookApplicationContext-20161004174017.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
